# Hardware-Map

./: .gitignore  CMakeLists.txt  README.md  d.cpp  install.sh  main.cpp  pci.ids  wc.cpp
audio/: audio.cpp
battery/: battery.cpp
bluetooth/: bluetooth.cpp
cpu/: Makefile  README.md  cpu.cpp  lscpu_own.cpp
disk/: disk.cpp
display/: Makefile  README.md  display.cpp  memory_info_own.cpp
ethernet/: ethernet.cpp
gpu/: gpu.cpp
hardware_map_gui/: hardware_map_gui.py  requirements.txt
keyboard/: keyboard.cpp
memory/: memory.cpp
mic/: mic.cpp
mouse/: mouse.cpp
ram/: ram.cpp
ram_info/: Makefile  RAM_info_own.c  README.md
sys_info/: sys_info.cpp
touchpad/: touchpad.cpp
webcam/: webcam.cpp
wireless/: wifi.cpp
